# Compiler

./: CMakeLists.txt  README.md
Compiler/: CompilerExplain.txt  CompilerFunctions.c  CompilerHeader.h  CompilerMain.c  KeywordHelper.c  Keywords.c  Simple.txt  older.txt
InfixToPostfix/: InfixExplain.txt  InfixFunctions.c  InfixHeader.h  InfixMain.c  older.txt
Programs/: CalculateIncome.txt  Calculator.txt  EvenOrOdd.txt  HighestGrade.txt  LoopAndSubroutine.txt  Pass.txt
SML/: Program.txt  SML.txt  SML_functions.c  SML_header.h  SML_macros.c  SML_main.c
